<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingHorizontal="16dp">

            <com.google.android.material.bottomsheet.BottomSheetDragHandleView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:minHeight="0dp"
                android:layout_gravity="center_horizontal" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bottom_sheet_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/read_config"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/tv_day_night"
                    style="@style/Widget.Material3Expressive.Button.IconButton.Tonal"
                    android:layout_height="36dp"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="?attr/colorTertiary"
                    app:iconSize="16dp"
                    app:icon="@drawable/ic_brightness"
                    app:backgroundTint="?attr/colorTertiaryContainer"
                    app:iconGravity="textStart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/bottom_sheet_title"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/set_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButtonGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginHorizontal="12dp" >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/tv_text_font"
                    style="@style/Widget.Material3Expressive.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/text_and_padding"
                    app:icon="@drawable/ic_cfg_txt"
                    tool:ignore="SmallSp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/tv_padding"
                    style="@style/Widget.Material3Expressive.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/padding"
                    app:icon="@drawable/ic_padding"
                    tool:ignore="SmallSp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/tv_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    style="@style/Widget.Material3Expressive.Button.OutlinedButton"
                    android:text="@string/information"
                    app:icon="@drawable/ic_header"
                    tool:ignore="SmallSp" />

            </com.google.android.material.button.MaterialButtonGroup>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:gravity="bottom"
            android:layout_marginHorizontal="16dp">

            <io.legado.app.ui.widget.SimpleCounterView
                android:id="@+id/dsb_text_size"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:max="45"
                app:layout_constraintStart_toStartOf="parent"
                app:orientation="vertical"
                app:title="@string/text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnChineseConverter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3Expressive.Button.OutlinedButton"
                android:minWidth="0dp"
                android:minHeight="0dp"
                app:iconPadding="0dp"
                app:icon="@drawable/ic_cn_convert"
                app:iconGravity="textStart"
                app:iconSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_more"
                app:layout_constraintStart_toEndOf="@id/dsb_text_size" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tv_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3Expressive.Button.TonalButton"
                app:icon="@drawable/ic_arrow_right"
                android:text="@string/more_setting"
                app:iconGravity="end"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:id="@+id/set_bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_page_anim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/page_anim"
                android:textStyle="bold"
                android:textSize="12sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/rg_page_anim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    app:singleLine="true"
                    app:singleSelection="true"
                    app:selectionRequired="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/rb_anim0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="@string/page_anim_cover" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/rb_anim1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="@string/page_anim_slide" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/rb_simulation_anim"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="@string/page_anim_simulation" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/rb_scroll_anim"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="@string/page_anim_scroll" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/rb_fade_anim"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="@string/page_anim_fade" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/rb_scroll_no_anim"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="@string/page_anim_scroll_no_anim" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/rb_no_anim"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="@string/page_anim_none" />

                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_bg_ts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/text_bg_style"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:alpha="0.6"
                    android:layout_weight="1"
                    android:layout_marginStart="4dp"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    android:text="@string/long_click_to_custom"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    tool:ignore="SmallSp" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cb_share_layout"
                    android:layout_width="48dp"
                    android:layout_height="44dp"
                    app:cornerRadius="8dp"
                    style="@style/Widget.Material3Expressive.Button.TonalButton"
                    android:checkable="true"
                    android:clickable="true"
                    android:layout_marginVertical="2dp"
                    app:icon="@drawable/ic_share_layout"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tool:listitem="@layout/item_read_style"
                    app:layout_constraintStart_toEndOf="@id/cb_share_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="48dp"
                    android:importantForAccessibility="no"
                    app:layout_constraintStart_toEndOf="@id/cb_share_layout"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/left_fade"/>

            </androidx.constraintlayout.widget.ConstraintLayout>



        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
